# palgate-tg-notify

./: .dev.env.example  .env.example  .gitignore  AGENTS.md  CLAUDE.md  Dockerfile  LICENSE  Makefile  README.md  aiocache.pyi  formatter.py  main.py  models.py  pyproject.toml  requirements.txt
.claude/skills/git/: SKILL.md
.github/workflows/: cd.yml  ci.yml  ci_cd.yml  deploy.yml  prestable.yml  promote.yml  rollback.yml
docs/: architecture.md  configuration.md
protos/: log_item.proto
scripts/: telethon_login.py  telethon_login_string.py
src/: bot.py  config.py  constants.py  enrich.py  formatter.py  github_client.py  healthcheck.py  main.py  metrics.py  metrics_server.py  models.py  notify.py  palgate.py  resolver.py  service.py  state.py  telegram_resolver.py
src/config/: __init__.py  settings.py
src/handlers/: __init__.py  broadcast.py  cache.py  http.py
src/services/: __init__.py  log_updater.py  token_generator.py
stubs/: aiocache.pyi
stubs/protobuf_pydantic_gen/: ext.pyi
stubs/telegram_handler/: utils.pyi
stubs/telethon/: __init__.pyi  errors.pyi  sessions.pyi
stubs/telethon/tl/: types.pyi
stubs/telethon/tl/functions/: contacts.pyi
tests/: conftest.py  test_bot.py  test_config.py  test_enrich.py  test_formatter.py  test_github_client.py  test_healthcheck.py  test_integration.py  test_main.py  test_models.py  test_notify.py  test_palgate.py  test_resolver.py  test_server_integration.py  test_service.py  test_state.py  test_telegram_resolver.py
