[project]
name = "palgate-tg-notify"
version = "0.1.0"
description = "Notifies about changes in Palgate log"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiocache>=0.12.3",
    "annotated-types==0.7.0",
    "certifi==2025.1.31",
    "charset-normalizer==3.4.1",
    "grpcio==1.62.2",
    "idna==3.10",
    "protobuf-pydantic-gen>=0.1.5",
    "pydantic==2.11.2",
    "pydantic-core==2.33.1",
    "pydantic-settings>=2.9.1",
    "pylgate",
    "python-telegram-handler>=2.2.1",
    "requests==2.32.3",
    "retry>=0.9.2",
    "types-requests==2.32.0.20250328",
    "typing-extensions==4.13.1",
    "typing-inspection==0.4.0",
    "urllib3==2.3.0",
]

[tool.uv.sources]
pylgate = { git = "https://github.com/DonutByte/pylgate.git", rev = "04962e1a40682856226306c26b541750528a8170" }

[tool.mypy]
plugins = ['pydantic.mypy']
mypy_path = ["src", "stubs", "models"]
strict = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = ["-v", "--tb=short", "--cov=src", "--cov-report=term-missing", "--cov-fail-under=90"]
markers = [
    "unit: Unit tests",
    "integration: Integration tests",
    "slow: Slow running tests"
]
filterwarnings = [
    "ignore:coroutine 'mainloop' was never awaited:RuntimeWarning:unittest.mock"
]


[dependency-groups]
dev = [
    "mypy>=1.15.0",
    "mypy-extensions==1.0.0",
    "types-protobuf>=6.30.2.20250503",
    "types-retry>=0.9.9.20250322",
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=7.0.0",
    "ruff>=0.15.2",
]
